--- a/css/style.css
+++ b/css/style.css
@@ -707,9 +707,24 @@ body.light hr.separator {
 }
 
 /*** Portfolio ***/
+.portfolio .slideshow-open .slideshow ul.mycustom {
+ display: block;
+ min-height: 60px;
+}
+.portfolio .slideshow ul.mycustom > li {
+ visibility: visible;
+ margin: 0;
+ width: 100%;
+ left: 0;
+ position: relative;
+}
+.portfolio .slideshow ul.mycustom > li:after {
+ background: none;
+}
+
 .portfolio .main-content {
-  padding-bottom: 60px;
-  margin-top: -15px;
+ padding-bottom: 60px;
+ margin-top: -15px;
 }
 
 /* Grid */
