--- a/css/style.css
+++ b/css/style.css
@@ -710,6 +710,7 @@ body.light hr.separator {
 .portfolio .slideshow-open .slideshow ul.mycustom {
  display: block;
  min-height: 60px;
+ list-style-type: disc;
 }
 .portfolio .slideshow ul.mycustom > li {
  visibility: visible;
