--- a/css/circle.css
+++ b/css/circle.css
@@ -1,4 +1,5 @@
 .rect-auto,
+.c100.p50 .slice,
 .c100.p51 .slice,
 .c100.p52 .slice,
 .c100.p53 .slice,
@@ -53,6 +54,7 @@
 }
 .pie,
 .c100 .bar,
+.c100.p50 .fill,
 .c100.p51 .fill,
 .c100.p52 .fill,
 .c100.p53 .fill,
@@ -116,6 +118,8 @@
   transform: rotate(0deg);
 }
 .pie-fill,
+.c100.p50 .bar:after,
+.c100.p50 .fill,
 .c100.p51 .bar:after,
 .c100.p51 .fill,
 .c100.p52 .bar:after,
@@ -648,10 +652,10 @@
   transform: rotate(176.4deg);
 }
 .c100.p50 .bar {
-   -webkit-transform: rotate(342deg);
-  -moz-transform: rotate(342deg);
-  -ms-transform: rotate(342deg);
-  -o-transform: rotate(342deg);
+  -webkit-transform: rotate(306deg);
+  -moz-transform: rotate(306deg);
+  -ms-transform: rotate(306deg);
+  -o-transform: rotate(306deg);
   transform: rotate(306deg);
 }
 .c100.p51 .bar {
@@ -753,10 +757,10 @@
   transform: rotate(230.4deg);
 }
 .c100.p65 .bar {
-  -webkit-transform: rotate(234deg);
-  -moz-transform: rotate(234deg);
-  -ms-transform: rotate(234deg);
-  -o-transform: rotate(234deg);
+  -webkit-transform: rotate(318deg);
+  -moz-transform: rotate(318deg);
+  -ms-transform: rotate(318deg);
+  -o-transform: rotate(318deg);
   transform: rotate(318deg);
 }
 .c100.p66 .bar {
