--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,3 @@
-/*
-Template Name: Tunis - Personal Portfolio
-Author: celtano
-Author URI: http://themeforest.net/user/celtano
-Description: Tunis - Personal Portfolio
-Version: 1.0
-*/
-
-/*------------------------------------------------------------------
-[Table of contents]
-	+ General
-	    - Miscellaneous
-		- Light Body
-		- Buttons
-		- Page Title
-	+ Header
-		- Desktop Navigation
-		- Mobile Navigation
-	+ Pages
-		- Homepage
-		+ About
-		    - Personal Info List
-			- Box Stats
-			- Resume
-			- Skills
-		+ Portfolio
-		    - Grid
-		    + Slideshow
-                - Embedded Videos
-                - Carousel
-                - Navigation
-        + Contact
-            - Left Side
-            - Contact Form
-		+ Blog
-            - Latest Posts
-            - Pagination
-	- Responsive Design Styles
--------------------------------------------------------------------*/
 
 /* [ GENERAL ] */
 /*================================================== */
@@ -708,16 +669,16 @@ body.light hr.separator {
 
 /*** Portfolio ***/
 .portfolio .slideshow-open .slideshow ul.mycustom {
- display: block;
- min-height: 60px;
- list-style-type: disc;
+  display: block;
+  min-height: 60px;
+  list-style-type: disc;
 }
 .portfolio .slideshow ul.mycustom > li {
- visibility: visible;
- margin: 0;
- width: 100%;
- left: 0;
- position: relative;
+  visibility: inherit;
+  margin: 0;
+  width: 580px;
+  left: 0;
+  position: relative;
 }
 .portfolio .slideshow ul.mycustom > li:after {
  background: none;
@@ -860,6 +821,15 @@ body.light hr.separator {
   visibility: hidden;
 }
 
+/*.portfolio .slideshow ul > li {
+    width: 660px;
+    position: relative;
+    top: 25%;
+    left: 50%;
+    margin: -280px 0 0 -330px;
+    visibility: hidden;
+}
+*/
 .portfolio .slideshow ul > li.show {
   visibility: visible;
 }
@@ -871,7 +841,7 @@ body.light hr.separator {
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0,0,0,1);
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
   z-index: 111;
@@ -892,6 +862,7 @@ body.light hr.separator {
   padding: 30px;
   overflow: auto;
   border-radius: 10px;
+  min-height: 400px;
 }
 
 .portfolio .slideshow a {
