--- a/css/style.css
+++ b/css/style.css
@@ -359,7 +359,7 @@ body.light hr.separator {
 
   .header.hide-header {
     z-index: 0 !important;
-    opacity: 0;
+    /*opacity: 0;*/
   }
 
   .header ul.icon-menu {
